--- a/travel-backend-jenkins-main/src/main/resources/application.properties
+++ b/travel-backend-jenkins-main/src/main/resources/application.properties
@@ -2,7 +2,7 @@ spring.application.name=travelmanagement
 server.port=8081
 spring.datasource.url=jdbc:mysql://localhost:3306/travelmanagement
 spring.datasource.username=root
-spring.datasource.password=root
+spring.datasource.password=Uraj2@7254
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
 spring.jpa.hibernate.ddl-auto=update
